	PR c++/71406 - ICE with scope-ref'd template id exprs 	PR c++/77508 	* typeck.c (finish_class_member_access_expr): Break up SCOPE_REF 	before breaking up TEMPLATE_ID_EXPR.

PR c++/71406
	PR c++/77508
	* g++.dg/template/pr71406.C: New.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@244832 138bc75d-0d04-0410-961f-82ee72b054a4